--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
