--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,33 @@ app/app\.iml
 CheerBall\.iml
 
 \.idea/caches/build_file_checksums\.ser
+
+\.idea/libraries/Gradle__com_caverock_androidsvg_1_2_1_jar\.xml
+
+\.idea/libraries/Gradle__com_github_bumptech_glide_annotations_4_7_1_jar\.xml
+
+\.idea/libraries/Gradle__com_github_bumptech_glide_disklrucache_4_7_1_jar\.xml
+
+\.idea/libraries/Gradle__com_github_bumptech_glide_gifdecoder_4_7_1\.xml
+
+\.idea/libraries/Gradle__com_github_bumptech_glide_glide_4_7_1\.xml
+
+\.idea/libraries/Gradle__com_jakewharton_timber_timber_4_7_0\.xml
+
+\.idea/libraries/Gradle__com_squareup_okhttp3_logging_interceptor_3_10_0_jar\.xml
+
+\.idea/libraries/Gradle__com_squareup_okhttp3_okhttp_3_10_0_jar\.xml
+
+\.idea/libraries/Gradle__com_squareup_okio_okio_1_14_0_jar\.xml
+
+\.idea/libraries/Gradle__com_squareup_retrofit2_adapter_rxjava2_2_4_0_jar\.xml
+
+\.idea/libraries/Gradle__com_squareup_retrofit2_converter_gson_2_4_0_jar\.xml
+
+\.idea/libraries/Gradle__com_squareup_retrofit2_retrofit_2_4_0_jar\.xml
+
+\.idea/libraries/Gradle__io_reactivex_rxjava2_rxandroid_2_0_2\.xml
+
+\.idea/libraries/Gradle__io_reactivex_rxjava2_rxjava_2_1_9_jar\.xml
+
+\.idea/libraries/Gradle__org_reactivestreams_reactive_streams_1_0_2_jar\.xml
