--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
     implementation "io.reactivex.rxjava2:rxkotlin:$rootProject.rxKotlinVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
-    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
+//    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
+//    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
+//    implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
+//    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
+//    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
@@ -67,20 +67,8 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttpVersion"
 
-    //    implementation "com.github.franmontiel:PersistentCookieJar:$rootProject.persistentCookieJarVersion"
-
-    //    annotationProcessor "com.google.auto.value:auto-value-annotations:$rootProject.autoValueVersion"
-
-    //    implementation "com.google.auto.value:auto-value:$rootProject.autoValueVersion"
-
-    //    annotationProcessor "com.ryanharter.auto.value:auto-value-gson-annotations:$rootProject.autoValueGsonVersion"
-
-    //    implementation "com.ryanharter.auto.value:auto-value-gson:$rootProject.autoValueGsonVersion"
     implementation 'com.android.support:cardview-v7:27.1.1'
 
-    //    annotationProcessor "com.ryanharter.auto.value:auto-value-parcel:$rootProject.autoValueParcelVersion"
-
-    //    implementation "com.ryanharter.auto.value:auto-value-parcel:$rootProject.autoValueParcelVersion"
     testImplementation "junit:junit:$rootProject.junitVersion"
     androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
